	     error case, don't try dereference NOPAGE_SIGBUS and NOPAGE_OMM.

Severity   : minor
Bugzilla   : 15716
Description: timeout with invalidate import.
Details    : ptlrpcd_check call obd_zombie_impexp_cull and wait request which
	     should be handled by ptlrpcd. This produce long age waiting and
	     -ETIMEOUT ptlrpc_invalidate_import and as result LASSERT.

Severity   : normal
Frequency  : only with broken builds/installations
Bugzilla   : 15779
Description: no LBUG if lquota.ko and fsfilt_ldiskfs.ko are different versions
Details    : just return an error to a user, put a console error message

Severity   : enhancement
Bugzilla   : 15741
Description: Update to RHEL5 kernel-2.6.18-53.1.19.el5.

Severity   : enhancement
Bugzilla   : 15742
Description: Update to RHEL4 kernel-2.6.9-67.0.15.

Severity   : enhancement
Bugzilla   : 14134
Description: enable MGS and MDT services start separately
Details    : add a 'nomgs' option in mount.lustre to enable start a MDT with
	     a co-located MGS without starting the MGS, which is a complement
	     to 'nosvc' mount option.

Severity   : normal
Frequency  : always, on big-endian systems
Bugzilla   : 14856
Description: cleanup in ptlrpc code, related to PPC platform
Details    : store magic in native order avoid panic's in recovery on PPC
	     node and forbid from this error in future. Also fix posibily
	     of twice swab data. Fix get lov striping to userpace.

Severity   : normal
Frequency  : rare, replay get lost on server
Bugzilla   : 15756
Description: server incorrectly drop resent replays lead to recovery failure.
Details    : do not drop replay according to msg flags, instead we check the
	     per-export recovery request queue for duplication of transno.

Severity   : normal
Frequency  : after recovery
Bugzilla   : 14835
Description: precreate to many object's after del orphan.
Details    : del orphan st in oscc last_id == next_id and this triger growing